--- a/style.css
+++ b/style.css
@@ -2,10 +2,22 @@
     box-sizing: border-box;
 }
 
+.content {
+    overflow-y: hidden;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
 body {
     margin: 0;
-    background: hsl(210, 20%, 98%);
-    color: hsl(210, 10%, 25%);
+    height: 100vh; 
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content {
+    flex: 1;
+    overflow: auto; 
 }
 
 header {
@@ -91,14 +103,37 @@ h2 {
     display: inline-block;
 }
 
-#convertBtn, #copyBtn, #clearBtn {
+#convertBtn{
     font-size: 20px;
     border-radius: 40px;
     cursor: pointer;
     background-color: hsl(207, 90%, 54%);
     margin-top: 30px;
     margin-bottom: 30px;
-    text-align: center;
+    text-align: left;
+    min-width: 10%;
+}
+
+#clearBtn{
+    font-size: 20px;
+    border-radius: 40px;
+    cursor: pointer;
+    background-color: hsl(207, 90%, 54%);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: left;
+    min-width: 7.7%;
+}
+
+#copyBtn{
+    font-size: 20px;
+    border-radius: 40px;
+    cursor: pointer;
+    background-color: hsl(207, 90%, 54%);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: left;
+    min-width: 7.3%;
 }
 
 #convertBtn, #clearBtn {
@@ -124,7 +159,7 @@ h2 {
 
 #copyResult {
     position: fixed;
-    top: 70px;
+    top: 60px;
     right: 20px;
     background-color: hsla(206, 56%, 53%, 0.562);
     padding: 10px 20px;
@@ -142,12 +177,19 @@ h2 {
 }
 
 .switch {
-    position: relative;
+    position: fixed;
+    top: 5px;  
+    right: 30px; 
     display: inline-block;
     width: 40px;
     height: 22px;
-    bottom: 110px;
-    left: 47%;
+    z-index: 1000;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .switch input {
@@ -185,8 +227,9 @@ input:checked + .slider {
 }
 
 input:checked + .slider:before {
-    transform: translateX(26px);
+    transform: translateX(18px);
 }
+
 
 .dark-theme {
     background: hsl(207, 30%, 10%);
@@ -198,11 +241,11 @@ input:checked + .slider:before {
 }
 
 #theme-switch-label {
-    font-family: Helvetica, sans-serif;
     text-align: center;
     font-size: 14px;
     margin-top: 5px;
-    transform: translate(47%, -650%);
+    transform: translate(47%, -600%);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body, html {
@@ -234,10 +277,8 @@ body, html {
 
     .switch {
         transform: scale(0.8);
-    }
-
-    #theme-switch-label {
-        transform: translate(0%, 0%);
+        top: 5px;
+        right: 5px;
     }
 
     #result {
@@ -247,26 +288,45 @@ body, html {
         left: 5%;
     }
 
-    #copyResult {
+    #result {
         position: absolute;
         width: 90%;
-        top: 80px;
+        top: 20px;
         left: 5%;
     }
 }
 
 footer {
+    position: sticky;
     bottom: 0;
     text-align: end;
     font-size: 10px;
     color: hsl(210, 3%, 13%);
     background-color: hsla(207, 90%, 54%, 0.658);
-    margin-bottom: 0%;
+    margin-bottom: 0;
     padding: 6px 5px;
     box-shadow: 3px 3px 5px hsl(207, 26%, 17%);
     height: 60px;
+    width: 100%;
+    z-index: 10;
 }
 
 #textInput::placeholder{
     color: black
+}
+
+.fa-solid.fa-copy {
+    color: #0d0d0e;
+    transform: translateX(-200%);
+}
+
+.fa-solid.fa-repeat{
+    color: #0d0d0e;
+    transform: translateX(-290%);
+}
+
+.fa-solid.fa-trash{
+    color: #0d0d0e;
+    transform: translateX(-270%);
+    font-size: 16px;
 }
