--- a/style.css
+++ b/style.css
@@ -8,26 +8,27 @@
     margin-bottom: 10px;
 }
 
-body {
+body, html {
     margin: 0;
-    height: 100vh; 
+    padding: 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    background-color: hsla(207, 49%, 89%, 0.425);
 }
 
 .main-content {
     flex: 1;
-    overflow: auto; 
+    overflow: auto;
 }
 
 header {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: hsla(207, 96%, 48%, 0.651);
-    display: block;
-    padding: 1px;
     box-shadow: 3px 3px 5px hsl(207, 26%, 17%);
-    max-height: 120px;
-    position: relative;
 }
 
 h1 {
@@ -39,7 +40,6 @@ h1 {
 #textInput {
     display: block;
     width: 100%;
-    min-height: 100px;
     overflow: hidden;
     padding: 10px;
     box-sizing: border-box;
@@ -53,16 +53,11 @@ h1 {
 }
 
 #outputText {
-    font-family: Arial, Helvetica, sans-serif;
-    white-space: pre-wrap;
-    word-wrap: break-word;
     background-color: hsla(207, 74%, 72%, 0.658);
-    box-shadow: 0px 0px 7px hsl(207, 90%, 94%);
-    border-radius: 10px;
     text-align: center;
-    min-height: 40px;
-    padding: 15px;
-    max-width: 100%;
+    word-wrap: break-word;
+    border-radius: 15px;
+    padding: 10px;
 }
 
 h2 {
@@ -76,15 +71,21 @@ h2 {
 }
 
 #buttonContainer {
+    font-size: 17px;
     text-align: left;
-    width: auto;
+    max-width: 15%;
     height: auto;
     background-color: hsla(207, 74%, 72%, 0.658);
     padding: 10px;
     box-shadow: 0px 0px 7px hsl(207, 90%, 94%);
     border-radius: 10px;
-    color: hsl(210, 10%, 25%);
     color: black;
+    border: 2px groove black;
+    position: sticky;
+    margin-top: 4%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -30%);
 }
 
 .checkboxes {
@@ -105,44 +106,44 @@ h2 {
 }
 
 #convertBtn{
-    font-size: 20px;
-    border-radius: 40px;
-    cursor: pointer;
-    background-color: hsl(207, 90%, 54%);
-    margin-top: 30px;
-    margin-bottom: 30px;
+    width: calc(9em - 10px);
+    background-color: hsl(207, 80%, 54%);
+    margin: 5px;
     text-align: left;
-    min-width: 10%;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 20px;
+    border: 1px solid;
 }
 
 #clearBtn{
-    font-size: 20px;
-    border-radius: 40px;
-    cursor: pointer;
-    background-color: hsl(207, 90%, 54%);
-    margin-top: 30px;
-    margin-bottom: 30px;
-    text-align: left;
-    min-width: 7.7%;
-}
-
-#copyBtn{
-    font-size: 20px;
-    border-radius: 40px;
-    cursor: pointer;
-    background-color: hsl(207, 90%, 54%);
-    margin-top: 30px;
-    margin-bottom: 30px;
-    text-align: left;
-    min-width: 7.3%;
-}
-
-#convertBtn, #clearBtn {
+    width: calc(8em - 10px);
+    background-color: hsl(207, 80%, 54%);
     margin: 5px;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 20px;
+    border: 1px solid;
+}
+
+#copyBtn {
+    width: calc(7em - 10px);
+    background-color: hsl(207, 80%, 54%);
+    margin: 5px;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 20px;
+    border: 1px solid;
 }
 
 #convertBtn:hover, #copyBtn:hover, #clearBtn:hover {
     background-color: hsl(207, 80%, 44%);
+    cursor: pointer;
 }
 
 #result {
@@ -178,19 +179,13 @@ h2 {
 }
 
 .switch {
-    position: absolute;
+    position: fixed;
     top: 5px;  
     right: 20px; 
     display: block;
     width: 40px;
     height: 22px;
     z-index: 1000;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
 }
 
 .switch input {
@@ -231,9 +226,8 @@ input:checked + .slider:before {
     transform: translateX(18px);
 }
 
-
 .dark-theme {
-    background: hsl(207, 30%, 10%);
+    background: hsl(213, 31%, 6%);
     color: hsl(207, 90%, 94%);
 }
 
@@ -263,13 +257,13 @@ body, html {
         max-height: unset;
     }
 
-    h1 {
-        font-size: 24px;
+    h1, h2 {
+        font-size: 20px;
     }
 
     #textInput, #outputText, #buttonContainer {
         width: 90%;
-        margin: auto;
+        margin: 10px auto;
     }
 
     footer {
@@ -280,6 +274,10 @@ body, html {
         transform: scale(0.8);
         top: 5px;
         right: 5px;
+    }
+
+    .switch, .fa-solid { /* Adjust icon sizes and positions */
+        transform: scale(0.8);
     }
 
     #result {
@@ -298,18 +296,11 @@ body, html {
 }
 
 footer {
-    position: sticky;
-    bottom: 0;
+    margin-top: 6vh;
+    padding-right: 5px;
     text-align: end;
     font-size: 10px;
-    color: hsl(210, 3%, 13%);
-    background-color: hsla(207, 90%, 54%, 0.658);
-    margin-bottom: 0;
-    padding: 6px 5px;
-    box-shadow: 3px 3px 5px hsl(207, 26%, 17%);
-    height: 60px;
-    width: 100%;
-    z-index: 10;
+    background-color: hsla(207, 80%, 48%, 0.753);;
 }
 
 #textInput::placeholder{
