--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
     width: 100%;
     max-width: calc(400px + 20vw);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    user-select: none;
 }
 
 header h1 {
@@ -108,6 +109,7 @@ form {
     border-radius: calc(5px + 0.5vw);
     border: 1px solid white;
     box-shadow: 0px 0px 10px white;
+    user-select: none;
 }
 
 .switch {
@@ -178,6 +180,7 @@ input:checked + .slider:before {
     font-size: calc(1rem + 0.5vw);
     margin-bottom: calc(5px + 0.5vw);
     color: #ffffff;
+    user-select: none;
 }
 
 #convertedText {
@@ -205,6 +208,7 @@ footer {
     width: 100%;
     max-width: calc(400px + 20vw);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    user-select: none;
 }
 
 footer h4 {
